--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="title_activity_main2">Main2Activity</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
+
+    <array name="Type">
+        <item>ชนิดเม็ด</item>
+        <item>ชนิดน้ำ</item>
+    </array>
+
 </resources>
